Bug 1339578 - Remove min active layer size for animations; r=mattwoodrow

Even for very small layers we want to avoid doing work on the main
thread.

At the same time, however, increase the minimum active layer size for
animations which come from restyles. These involve the main thread
anyway, so there is less to be gained from using an active
layer. Since switching items between active and inactive can have
large knock-on effects, we want to make sure it really is worth making
the layer active.

MozReview-Commit-ID: 8N6xlVW4Dp3